# silhouette

./: .gitignore  CMakeLists.txt  README.md
assets/: postbox.blend  postbox.xcf
include/silhouette/: Image.h  color.h  config.cmake.hpp  image.h  scene.h
include/silhouette/Import/: Import.h
include/silhouette/Scene/: Scene.h
include/silhouette/codec/image/: png.h
include/silhouette/codec/scene/: collada.hpp  obj.h
include/silhouette/image/: Image.h
include/silhouette/import/: Import.h
include/silhouette/scene/: Mesh.h  Scene.h
src/: image.cpp  scene.cpp  stb_image.h
src/Image/: Image.cpp
src/Import/: Collada.cpp
src/Scene/: Scene.cpp
src/codec/image/: png.cpp
src/codec/scene/: collada.cpp  obj.cpp
src/image/: Image.cpp
src/import/: Collada.cpp
src/scene/: Scene.cpp
tests/: image_tests.cpp  scene_tests.cpp
tests/Scene/: SceneTests.cpp
tests/codec/scene/: obj_tests.cpp
tests/fixtures/: asteroid.mtl  box.blend  box.dae  clean_box.blend  clean_box.dae  postbox.mtl
tests/scene/: SceneTests.cpp
